--- a/01-HTML-CSS/05-BEM/Tal/style.css
+++ b/01-HTML-CSS/05-BEM/Tal/style.css
@@ -1,22 +1,36 @@
 .button {
   border-radius: 40px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   border: 2px solid black;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 200px;
   padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 5px;
 }
+
 .button--danger {
   border: 2px solid red;
   color: red;
 }
+
 .button h1 {
   background-color: aliceblue;
 }
+
 .button img {
   width: 200px;
 }
+/*# sourceMappingURL=style.css.map */
