--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.css
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.css
@@ -1,40 +1,84 @@
 .NavBar {
   width: 100%;
   height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #333;
   font-size: 20px;
 }
+
 .NavBar a {
   color: white;
   padding: 17.5px 20px;
   text-decoration: none;
   text-align: center;
 }
+
 .NavBar a:hover {
   background-color: #ddd;
   color: black;
 }
+
 .NavBar--news_Header {
   width: 100%;
   height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   background-color: red;
   font-size: 18px;
-  padding: 10px;
+  padding: 5px;
 }
+
 .NavBar--news_Header a {
   color: white;
   padding: 10px;
   text-decoration: none;
   text-align: center;
 }
+
 .NavBar--news_Header a:hover {
   color: black;
 }
+
+.NavBar--sport_Header {
+  width: 100%;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  background-color: orange;
+  font-size: 18px;
+  padding: 5px;
+}
+
+.NavBar--sport_Header a {
+  color: white;
+  padding: 10px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.NavBar--sport_Header a:hover {
+  color: black;
+}
+
 .NavBar__logo {
   cursor: pointer;
   width: 150px;
@@ -42,6 +86,7 @@
   position: relative;
   bottom: 30px;
 }
+
 .NavBar__search {
   width: 50px;
   height: 57px;
@@ -55,10 +100,12 @@
   bottom: 58px;
   left: 94%;
 }
+
 .NavBar__search:hover {
   background: #ddd;
   color: black;
 }
+
 .NavBar__sign {
   background-color: #333;
   color: white;
@@ -68,6 +115,7 @@
   bottom: 58px;
   left: 0.5%;
 }
+
 .NavBar__sign:hover {
   cursor: pointer;
   background-color: #ddd;
@@ -82,10 +130,21 @@
   margin-bottom: 50px;
 }
 
+.OrangeHeader {
+  background-color: orange;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  padding: 10px;
+  margin-bottom: 50px;
+}
+
 .main__upper {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
   color: black;
   width: 90%;
   grid-auto-columns: minmax(auto, auto);
@@ -93,139 +152,249 @@
   gap: 1em;
   margin: auto;
 }
-.main__upper__news {
+
+.main__upper--grid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: (1fr 1fr)[8];
+      grid-template-columns: repeat(8, 1fr 1fr);
+  width: 100vw;
+}
+
+.main__upper__box {
+  -ms-grid-column: 9;
+  grid-column: 9;
+  display: -ms-grid;
+  display: grid;
+}
+
+.main__upper__news {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1/3;
-  grid-template-columns: 50% 70% 50%;
-  grid-template-rows: 50% 50%;
+  -ms-grid-columns: 50% 70% 50%;
+      grid-template-columns: 50% 70% 50%;
+  -ms-grid-rows: 50% 50%;
+      grid-template-rows: 50% 50%;
   height: 60vh;
-  column-gap: 2em;
+  -webkit-column-gap: 2em;
+          column-gap: 2em;
   margin-left: 150px;
   padding-top: 100px;
 }
+
 .main__upper__news--block {
+  display: -ms-grid;
   display: grid;
   margin: 50px;
-  grid-template-columns: 100%;
-  grid-template-rows: repeat(10, 1fr);
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
+  -ms-grid-rows: (1fr)[10];
+      grid-template-rows: repeat(10, 1fr);
   margin-top: 0;
   margin-bottom: 0;
   grid-auto-rows: minmax(100px, auto);
 }
+
 .main__upper__news--block > h1 {
+  -ms-grid-row: 1;
   grid-row: 1;
   font-size: 15px;
   font-weight: 1000;
 }
+
 .main__upper__news--block > h1 a {
   text-decoration: none;
   color: #807e7e;
 }
+
 .main__upper__news--block > h1 a:hover {
   color: #5b7199;
   font-weight: bold;
   font-size: 110%;
   text-decoration: underline;
 }
+
 .main__upper__news--block > p {
   font-size: 10px;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 1000;
   font-weight: bold;
 }
+
 .main__upper__news--block > a {
   text-decoration: none;
+  -ms-grid-row: 10;
   grid-row: 10;
   color: #464242;
   font-size: 15px;
 }
+
 .main__upper__news--block > a:hover {
   cursor: pointer;
   color: #6b6b6b;
-  text-decoration-line: underline;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
+
 .main__upper__news--BottomLinks {
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: 35% 30% 30%;
-  grid-row-start: 2;
+  -ms-grid-rows: (1fr)[4];
+      grid-template-rows: repeat(4, 1fr);
+  -ms-grid-columns: 35% 30% 30%;
+      grid-template-columns: 35% 30% 30%;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1/3;
   font-weight: 1000;
   font-size: 15px;
-  column-gap: 15px;
+  -webkit-column-gap: 15px;
+          column-gap: 15px;
 }
+
 .main__upper__news--BottomLinks > a {
+  -ms-grid-row: 2;
   grid-row: 2;
   text-decoration: none;
   padding-left: 40px;
   color: #333;
 }
+
 .main__upper__news--BottomLinks > a:hover {
   cursor: pointer;
   color: #4e6ed6;
-  text-decoration-line: underline;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
+
 .main__upper__news--ImgNews {
   background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/1365C/production/_121825497_9d05de58-c5d1-49ac-99e9-920c84103a11.jpg);
   background-position: center;
   background-size: cover;
 }
+
 .main__upper__img {
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: repeat(8, 1fr);
+  -ms-grid-rows: (1fr)[8];
+      grid-template-rows: repeat(8, 1fr);
   background-size: cover;
   background-position: center;
   height: 30vh;
   padding: 1rem;
 }
+
 .main__upper__img:nth-child(2) {
   background-image: url("https://e3.365dm.com/20/08/768x432/skynews-sideman-bbc-1extra_5062530.jpg?20200808215407");
   background-position: center;
   background-size: cover;
 }
+
 .main__upper__img:nth-child(3) {
   background-image: url("https://e3.365dm.com/20/08/768x432/skynews-sideman-bbc-1extra_5062530.jpg?20200808215407");
   background-position: center;
   background-size: cover;
 }
+
 .main__upper__img:nth-child(4) {
   background-image: url("https://e3.365dm.com/20/08/768x432/skynews-sideman-bbc-1extra_5062530.jpg?20200808215407");
   background-position: center;
   background-size: cover;
 }
+
 .main__upper__img:nth-child(5) {
   background-image: url("https://e3.365dm.com/20/08/768x432/skynews-sideman-bbc-1extra_5062530.jpg?20200808215407");
   background-position: center;
   background-size: cover;
 }
+
 .main__upper__img h2 {
+  -ms-grid-row: 1;
   grid-row: 1;
 }
+
 .main__upper__img h3 {
+  -ms-grid-row: 2;
   grid-row: 2;
 }
+
 .main__upper__img p {
+  -ms-grid-row: 3;
   grid-row: 3;
 }
+
 .main__upper__img--big {
   background-size: cover;
   width: 45vw;
   height: 71.5vh;
-  grid-row: 1/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1/3;
   overflow: auto;
   background-image: url("https://e3.365dm.com/20/08/768x432/skynews-sideman-bbc-1extra_5062530.jpg?20200808215407");
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.main__upper__img--big--sports {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr 1fr)[8];
+      grid-template-columns: repeat(8, 1fr 1fr);
+  width: 100vh;
+}
+
+.main__upper__img--big--sports img {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  grid-row: 1/4;
+}
+
+.main__upper__img--big--sports h2 {
+  grid-row: 0;
+  -ms-grid-column: 6;
+  grid-column: 6;
+}
+
+.main__upper__img--big--sports h3 {
+  -ms-grid-column: 6;
+  grid-column: 6;
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+.main__upper__img--big--sports p {
+  -ms-grid-row: 3;
+  grid-row: 3;
+  -ms-grid-column: 6;
+  grid-column: 6;
+}
+
 .main__upper__img--big--news {
   border: 5px solid red;
 }
+
 .main__down {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
   background-size: cover;
   height: 1vh;
   width: 60%;
@@ -233,26 +402,36 @@
   padding-top: 5%;
   margin: auto;
 }
+
 .main__down__box {
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: 45% 25% 24% 12%;
-  height: 100%;
+  -ms-grid-rows: 45% 25% 24% 12%;
+      grid-template-rows: 45% 25% 24% 12%;
   width: 100%;
 }
+
+.main__down__box a {
+  text-decoration: none;
+}
+
 .main__down__box h2 {
+  -ms-grid-row: 2;
   grid-row: 2;
   text-align: center;
 }
-.main__down__box h3 {
+
+.main__down__box p {
+  padding-top: 5px;
+  -ms-grid-row: 3;
   grid-row: 3;
   text-align: center;
 }
-.main__down__box p {
-  grid-row: 4;
-  text-align: center;
-}
+
 .main__down__box img {
   height: 100%;
   width: 100%;
+  -ms-grid-row: 1;
   grid-row: 1;
 }
+/*# sourceMappingURL=style.css.map */
