--- a/01-HTML-CSS/06-BEM model/noa artur shimon/חדש/style.css
+++ b/01-HTML-CSS/06-BEM model/noa artur shimon/חדש/style.css
@@ -1,43 +1,110 @@
+body {
+  margin: 0%;
+  font-family: 'Open Sans', sans-serif;
+  position: relative;
+}
+
 .header {
-  background-color: #f73959;
-  position: fixed;
-  width: 100%;
-}
-
-.header h1 {
-  background-color: pink;
-}
-
-.header span {
-  color: white;
-  font-weight: 700;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
+  background-color: pink;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 100px;
+  width: 100%;
+  height: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 20px;
+  position: fixed;
+  top: 0px;
 }
 
 .header i {
-  padding-right: 5px;
+  padding: 5px;
+  font-size: 20px;
 }
 
 .navbar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   width: 100%;
-  height: auto;
+  height: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 20px;
+  background-color: aqua;
+  position: absolute;
+  top: 50px;
 }
 
-body {
+.navbar a {
+  text-decoration: none;
+}
+
+.ad {
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 200px;
+  padding: 30px;
+}
+
+.grid-main {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-columns: (200px)[4];
+      grid-template-columns: repeat(4, 200px);
+  -ms-grid-rows: (200px)[2];
+      grid-template-rows: repeat(2, 200px);
+  gap: 15px;
+}
+
+.grid-main img {
+  height: auto;
+  width: 100%;
+  border: solid black;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.grid-main p {
+  position: relative;
+  bottom: 20px;
+  color: black;
+  font-weight: 900;
+  background-color: rgba(86, 86, 124, 0.205);
+  opacity: 0.6;
+}
+
+.grid-main .text {
+  color: black;
+  background-color: white;
   margin: 0;
+}
+
+.grid-main .box1 {
+  grid-column: span 3;
+  grid-row: span 2;
+}
+
+.grid-main .box2 {
+  grid-row: span 2;
 }
 /*# sourceMappingURL=style.css.map */
