--- a/01-HTML-CSS/07-SCSS/tamir.work/style.scss
+++ b/01-HTML-CSS/07-SCSS/tamir.work/style.scss
@@ -1,9 +1,7 @@
-.old {
+.wrapper {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: 10vh 20vh 20vh;
-    border: solid black;
-
 
     .title {
         background-color: blueviolet;
@@ -11,20 +9,23 @@
         grid-row: 1/2;
     }
 
+    .box {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 10vh 20vh 20vh;
+        border: solid black;
+    }
+
     .box1 {
+        
         grid-column: 1/3;
         grid-row: 2/4;
-
-
-        .img{
-            display: flex;
-            justify-content: center;
-            align-items: center;
+    
+        &__img{
+            background-image: url(drinks/שוקו.jpg);
+            height: 100%;
+            width: 100%;
         }
     }
-    .game{
-        background-color: chocolate;
-        grid-column: 4/5;
-        grid-row: 3/4;
-    }
+
 }
