--- a/01-HTML-CSS/07-SCSS/yahya/style2.scss
+++ b/01-HTML-CSS/07-SCSS/yahya/style2.scss
@@ -97,7 +97,9 @@ p{
    background-size: cover;
     
  }
- 
+ p{
+    margin-top: 900px;
+ }
 }
  
 .num1{
@@ -176,7 +178,7 @@ p{
 }
 h1{
    justify-content: end;
-   color: brown;
+   color: rgb(75, 7, 7);
    font-size: xx-large;
    margin-top: 100px;
 }
