--- a/01-HTML-CSS/07-SCSS/chaim/style.scss
+++ b/01-HTML-CSS/07-SCSS/chaim/style.scss
@@ -1,27 +1,53 @@
-
+body{
+    background-color: green;
+    color: rosybrown;
+}
 .wrapper{
     display: flex;
-    background-color: sandybrown;
-    color: seagreen;
-    width: 400px;
-}
-.card{
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    justify-self: start;
+    position: relative;
+    top: 40px;
+
+&__card{
+        color: red;
+    }
+
+&__card{
     background-color: aqua;
     color: seagreen;
-    width: fit-content;
-    height: fit-content;
+    width: 200px;
+    height: 200px;
      border-radius: 10px;
 }
 img{
     width: 200px;
     height: 200px;
-    bottom: 20%;
-    bottom: 100%;
+    top: 50px;
+    flex: var(1fr);
 }
 
+
+img:hover{
+    filter: grayscale(40%);
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+
+p{
+    text-align: var(10px);
+    font-size: var(1fr);
+    position: relative;
+    bottom: 30%;
+    right: 130px;
+}
 .card{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(10 vh);
+    gap:var(10px);
 }
-    
+}   
