--- a/01-HTML-CSS/07-SCSS/IdoGino/Task6.scss
+++ b/01-HTML-CSS/07-SCSS/IdoGino/Task6.scss
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(95, 92, 92);
+    background-color: rgb(43, 39, 39);
     margin: 0;
 }
 .main{
@@ -86,7 +86,8 @@ body{
                 & p{
                     grid-column: 4/7;
                     grid-row: 2/5;
-                    font-weight: 300;
+                    font-weight: 1000;
+                    font-size: 13px;
                 }
                 .btnOne{
                     background-image: url(https://imagefinder.co/storage/w1000/images/2019/06/burst_gaming-controller-against-a-black-background.jpg);
@@ -273,9 +274,10 @@ body{
             a{
                 grid-column: 3/4;
                 padding-top: 15px;   
-                font-weight: 1000;
+                font-weight: 500;
                 font-size: 14px;
                 text-decoration: none;
+                font-family: 'Lobster', cursive;
             }
             img{
                 grid-row: 1/5;
@@ -294,18 +296,16 @@ body{
         grid-row: 40/102;
         row-gap: 12px;
         column-gap: 20px;
-        // border: 3px solid red;
 
         &-headline{
             grid-row: 1;
             grid-column: 1/5;
-            font-size: 10px;
+            font-size: 9px;
             h1{
                 color: white;
                 text-align: center;
             }
         }
-
         &-firstLine{
             display: flex;
             flex-direction: row;
@@ -319,9 +319,7 @@ body{
             grid-column: 1/21;
             grid-row: 3/4;
             column-gap: 10px;
-            // border: 3px solid red;
-        }
-      
+        }   
     }
     .animationBox{
         display: grid;
@@ -331,9 +329,7 @@ body{
         border-radius: 15px;
         height: 15vh;
         width: 9vw;
-        box-shadow:20px 10px 10px rgb(41, 37, 37); 
-        // border: 3px solid red;
-        
+        box-shadow:20px 10px 10px rgb(41, 37, 37);         
         &:hover{
             cursor: pointer;
         }
@@ -350,14 +346,13 @@ body{
     }
     p{
         color: white;
-        font-weight: 700;
+        font-weight: 1000;
         text-align: center;
         font-size: 12px;
-        grid-column: 1/4;
+        grid-column: 1/5;
         grid-row: 2/3;
-        width: 90%;
-        text-align: center;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-family: 'Rajdhani', sans-serif;
         
     }
     &-commercial{
@@ -365,16 +360,21 @@ body{
         grid-template-columns: repeat(20,1fr);
         grid-template-rows: repeat(4,1fr);
         grid-column: 2/20;
-        grid-row: 104/120;
-        height: 30vh;
-        // border: 3px solid red;
+        grid-row: 95/125;
 
         .firstCommercial{
-            grid-row: 1/5;
-            grid-column: 6/16;
+            grid-row: 2/5;
+            grid-column: 6/14;
             background-image: url(https://i.ytimg.com/vi/lVDNmkQ63mU/maxresdefault.jpg);
             background-position: center;
             background-size: cover;
+        }
+        h1{
+            grid-row: 1;
+            grid-column: 13;
+            font-size: 12px;
+            color: white;
+            font-weight: 0;
         }
     }
 
@@ -384,7 +384,6 @@ body{
         grid-template-rows: repeat(5,1fr);
         grid-row: 130/190;
         grid-column: 2/20;
-        // border: 3px solid red;
         row-gap: 12px;
         column-gap: 20px;
 
@@ -393,7 +392,6 @@ body{
             grid-row: 2/3;
             grid-column: 2/20;
         }
-
         h1{
             grid-row:1;
             grid-column: 1/7;
@@ -420,11 +418,28 @@ body{
                 cursor: pointer;
                 top: -5px;
             }  
-
-        }
-        
+        }  
 }
+        &_freeGames{
+            grid-row: 10/14;
+            grid-column: 1/21;
+            background-image: url(https://static8.depositphotos.com/1397034/1041/i/950/depositphotos_10417474-stock-photo-fade-blue-abstract-background-over.jpg);
+            border: 1px solid rgb(192, 188, 188);
+            border-radius: 7px;
 
+            h1{
+                color: rgb(187, 182, 189);
+                text-align: center;
+                font-weight: 1000;
+                font-family: cursive;
+            }
+            &:hover{
+                cursor: pointer;
+            }
+        }
+        & h1{
+            font-family: cursive;
+        }
     }
 
 
