--- a/01-HTML-CSS/07-SCSS/IdoGino/Task6.scss
+++ b/01-HTML-CSS/07-SCSS/IdoGino/Task6.scss
@@ -85,9 +85,9 @@ body{
 
                 & p{
                     grid-column: 4/7;
-                    grid-row: 2/5;
+                    grid-row: 3/5;
                     font-weight: 1000;
-                    font-size: 13px;
+                    font-size: 14px;
                 }
                 .btnOne{
                     background-image: url(https://imagefinder.co/storage/w1000/images/2019/06/burst_gaming-controller-against-a-black-background.jpg);
@@ -168,7 +168,6 @@ body{
         margin-left: 30px;
         grid-template-columns: repeat(10,1fr);
         grid-template-rows: repeat(8,1fr);
-        // border: 5px solid red;
         
         .box{
             display: grid;
@@ -241,35 +240,33 @@ body{
             }
             &-more{
                 width: 170%;
+                margin-bottom: 15px;
                 display: grid;
-                grid-template-rows: 25% 10% ;
+                grid-template-rows: 20% 10% 10%;
                 grid-template-columns: repeat(8,1fr);
                
                 h4{
                     grid-row: 1;
-                    font-size: 12px;
+                    font-size: 9px;
                     grid-column: 3/6;
-                    color: white;
-                    margin-top: 0;
+                    color: white;   
                 }
                 p{
-                    grid-row: 2;
-                    font-size: 10px;
-                    grid-column: 3/6;
+                    grid-row: 3;
+                    font-size: 9px;
+                    grid-column: 3/5;
                     color: white;
-                    font-weight: 1000;
+                    font-weight: bold;
                 }
                 img{
                     grid-column: 1/2;
-                    grid-row:2 ;
+                    grid-row:2;
                     width: 120%;
                 }
                 &:hover{
                     border: none;
                     margin-top: -10px;
-
                 }
-
             }
             a{
                 grid-column: 3/4;
@@ -284,9 +281,7 @@ body{
                 height: 100%;
                 border-radius: 10px;
             }
-          
         }
-      
     }
     &_mostAddictingGames{
         display: grid;
@@ -403,15 +398,14 @@ body{
             }
         }
         .btn-viewLastWeek{
-            grid-column: 18/21;
+            grid-column: 17/20;
             grid-row: 1;
-            // border: 3px solid red;
             text-align: center;
             padding-top: 12px;
             color: white;
-            font-weight: 600;
             box-shadow:5px 5px 5px rgb(22, 22, 22);
             border-radius: 10px;
+            padding-top: 20px;
             
             &:hover{
                 position: relative;
@@ -439,6 +433,56 @@ body{
         }
         & h1{
             font-family: cursive;
+        }
+
+        &_BottomRow{
+            margin-bottom:0;
+            display: grid;
+            grid-template-columns: repeat(20,1fr);
+            grid-template-rows: repeat(10,1fr);
+            background-color:rgb(0, 0, 0);
+            grid-row: 215/260;
+            grid-column: 1/21;
+
+            &-logo{
+                background-image: url(https://static1.thegamerimages.com/wordpress/wp-content/uploads/2020/04/addicting-games-cover.jpg);
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+                grid-column: 8/13;
+                grid-row: 1/5;
+            }
+            p{
+                grid-row: 9 ;
+                grid-column: 8/13;
+                font-size: 17px;
+                font-weight: 1000;
+            }
+            &-BottomList{
+            grid-row: 7/8;
+            display: flex;
+            flex-direction: row;
+            grid-column: 7/14;
+
+
+            a{
+                display: block;
+                color: rgb(153, 0, 224);
+                text-decoration: none;
+                text-align: center;
+                font-size: 13px;
+                width: 100%;
+                margin-right: 12px;
+
+                &:hover{
+                    font-size: 14px;
+                }
+                
+                
+                
+            }
+            }
+
         }
     }
 
