--- a/01-HTML-CSS/07-SCSS/IdoGino/Task6.scss
+++ b/01-HTML-CSS/07-SCSS/IdoGino/Task6.scss
@@ -247,16 +247,16 @@ body{
                
                 h4{
                     grid-row: 1;
-                    font-size: 9px;
-                    grid-column: 3/6;
+                    font-size: 12px;
+                    grid-column: 3/4;
                     color: white;   
                 }
                 p{
-                    grid-row: 3;
-                    font-size: 9px;
-                    grid-column: 3/5;
+                    grid-row: 4;
+                    font-size: 10px;
+                    grid-column: 4/8 ;
                     color: white;
-                    font-weight: bold;
+                    font-weight: 1000;
                 }
                 img{
                     grid-column: 1/2;
