--- a/01-HTML-CSS/07-SCSS/tamir.work/style.scss
+++ b/01-HTML-CSS/07-SCSS/tamir.work/style.scss
@@ -1,31 +1,167 @@
-.wrapper {
+.wrapper1 {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 10vh 20vh 20vh;
+    border: 2px solid black;
+    grid-template-rows: 10vh 35vh 35vh;
+    grid-template-columns: repeat(4, 1fr);
+    
 
     .title {
-        background-color: blueviolet;
-        grid-column: 1/7;
+        grid-column: 1/6;
         grid-row: 1/2;
-    }
-
-    .box {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: 10vh 20vh 20vh;
-        border: solid black;
+        text-align: center;
+        font-size: 30px;
+        font-style: italic;
+        background-color: darkblue;
     }
 
     .box1 {
-        
         grid-column: 1/3;
         grid-row: 2/4;
-    
-        &__img{
-            background-image: url(drinks/שוקו.jpg);
+
+        &__img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             height: 100%;
             width: 100%;
         }
     }
 
+    .box2 {
+        grid-column: 3/4;
+        grid-row: 2/3;
+        height: 100%;
+        width: 100%;
+
+        &--img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    .box3 {
+        grid-column: 3/4;
+        grid-row: 3/4;
+
+        &__img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    .box4 {
+        grid-column: 4/5;
+        grid-row: 3/4;
+
+        &__img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    .box5 {
+        grid-column: 4/5;
+        grid-row: 2/3;
+
+        &__img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+}
+
+.wrapper2 {
+    display: grid;
+    border: 2px solid black;
+    grid-template-rows: 10vh 35vh 35vh;
+    grid-template-columns: repeat(4, 1fr);
+
+
+    .title2 {
+        grid-column: 1/6;
+        grid-row: 1/2;
+        text-align: center;
+        font-size: 30px;
+        font-style: italic;
+        background-color: darkblue;
+    }
+
+    .box1 {
+        grid-column: 1/3;
+        grid-row: 2/4;
+
+        &__img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    .box2 {
+        grid-column: 3/4;
+        grid-row: 2/3;
+        height: 100%;
+        width: 100%;
+
+        &--img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    .box3 {
+        grid-column: 3/4;
+        grid-row: 3/4;
+
+        &__img {
+            display: flex;
+            justify-content: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    .box4 {
+        grid-column: 4/5;
+        grid-row: 3/4;
+
+        &__img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    .box5 {
+        grid-column: 4/5;
+        grid-row: 2/3;
+
+        &__img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
 }
