--- a/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
@@ -15,6 +15,11 @@ body {
         border: 2px black solid;
         grid-column-start: 1;
         grid-column-end: 7;
+        &:hover{
+            background-color: rgb(4, 44, 58);
+            transition: 1s;
+
+        }
 
 
         h1 {
@@ -125,6 +130,10 @@ body {
             grid-row-start: 2;
             grid-row-end: 4;
             background-color: rgb(31, 85, 10);
+            &:hover{
+                background-color: rgb(17, 46, 5);
+
+            }
 
 
             &.one {
@@ -190,8 +199,8 @@ body {
                     border: 2px solid green;
 
 
-
                 }
+                
 
             }
 
@@ -204,7 +213,7 @@ body {
 
 
         &.classic {
-            background-color: red;
+        
             grid-row-start: 4;
             grid-row-end: 8;
             margin: 20px;
@@ -214,7 +223,7 @@ body {
             &.one {
                 grid-column-start: 1;
                 grid-column-end: 4;
-                background-image: linear-gradient(red, yellow);
+                /*background-image: linear-gradient(red, yellow);*/
                 
 
 
@@ -225,7 +234,7 @@ body {
                 }
 
                 h2:hover {
-                    text-shadow: rgb(235, 220, 220) 2px 2px;
+                    text-shadow: rgb(255, 19, 19)2px 2px;
                     cursor:pointer;
 
                 }
@@ -236,6 +245,7 @@ body {
                     display: block;
                     margin: auto;
                     border-radius: 10px;
+                    
                     
                 }
 
@@ -274,6 +284,9 @@ body {
                     margin: auto;
                     border-radius: 10px;
                 }
+                p{
+                    padding-left:10%;
+                }
 
             }
 
@@ -307,6 +320,9 @@ body {
                     margin: auto;
                     border-radius: 10px;
                 }
+                p{
+                    padding-left:10%;
+                }
 
             }
 
@@ -315,14 +331,14 @@ body {
                 &:hover {
                     cursor: pointer;
                     opacity: 0.7;
-                    text-shadow: rgb(255, 9, 9) 2px 2px;
+                    text-shadow:rgb(255, 19, 19) 2px 2px;
 
 
 
                 }
 
                 img {
-                    border: 2px solid rgb(255, 3, 3);
+                    border: 4px solid rgb(255, 3, 3);
                 }
 
             }
@@ -341,6 +357,11 @@ body {
             background-color: rgb(194, 25, 143);
             grid-row-start: 8;
             grid-row-end: 10;
+            
+            &:hover{
+                background-color: rgb(133, 16, 98);
+
+            }
 
 
             &.one {
