--- a/01-HTML-CSS/07-SCSS/tamir.work/style.scss
+++ b/01-HTML-CSS/07-SCSS/tamir.work/style.scss
@@ -5,18 +5,22 @@
     grid-template-columns: repeat(4, 1fr);
     
 
+
     .title {
         grid-column: 1/6;
         grid-row: 1/2;
         text-align: center;
         font-size: 30px;
         font-style: italic;
-        background-color: darkblue;
+        background-color: red;
     }
 
     .box1 {
         grid-column: 1/3;
         grid-row: 2/4;
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
 
         &__img {
             display: flex;
@@ -26,13 +30,23 @@
             width: 100%;
         }
     }
+    .box1:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
+    }
 
     .box2 {
         grid-column: 3/4;
         grid-row: 2/3;
         height: 100%;
         width: 100%;
-
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
+        
         &--img {
             display: flex;
             justify-content: center;
@@ -41,10 +55,21 @@
             width: 100%;
         }
     }
-
+    
+    .box2:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
+    
+    }
     .box3 {
         grid-column: 3/4;
         grid-row: 3/4;
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
 
         &__img {
             display: flex;
@@ -53,11 +78,21 @@
             height: 100%;
             width: 100%;
         }
+    }
+    .box3:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
     }
 
     .box4 {
         grid-column: 4/5;
         grid-row: 3/4;
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
 
         &__img {
             display: flex;
@@ -67,10 +102,20 @@
             width: 100%;
         }
     }
+    .box4:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
+    }
 
     .box5 {
         grid-column: 4/5;
         grid-row: 2/3;
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
 
         &__img {
             display: flex;
@@ -79,6 +124,13 @@
             height: 100%;
             width: 100%;
         }
+    }
+    .box5:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
     }
 
 }
@@ -96,12 +148,15 @@
         text-align: center;
         font-size: 30px;
         font-style: italic;
-        background-color: darkblue;
+        background-color:red;
     }
 
     .box1 {
         grid-column: 1/3;
         grid-row: 2/4;
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
 
         &__img {
             display: flex;
@@ -110,6 +165,14 @@
             height: 100%;
             width: 100%;
         }
+        
+    }
+    .box1:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
     }
 
     .box2 {
@@ -117,6 +180,9 @@
         grid-row: 2/3;
         height: 100%;
         width: 100%;
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
 
         &--img {
             display: flex;
@@ -126,10 +192,20 @@
             width: 100%;
         }
     }
+    .box2:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
+    }
 
     .box3 {
         grid-column: 3/4;
         grid-row: 3/4;
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
 
         &__img {
             display: flex;
@@ -137,11 +213,21 @@
             height: 100%;
             width: 100%;
         }
+    }
+    .box3:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
     }
 
     .box4 {
         grid-column: 4/5;
         grid-row: 3/4;
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
 
         &__img {
             display: flex;
@@ -151,10 +237,20 @@
             width: 100%;
         }
     }
+    .box4:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
+    }
 
     .box5 {
         grid-column: 4/5;
         grid-row: 2/3;
+        border: solid black;
+        border-radius: 40px;
+        box-shadow: black (10px 10px 30px);
 
         &__img {
             display: flex;
@@ -163,5 +259,12 @@
             height: 100%;
             width: 100%;
         }
+    }
+    .box5:hover{
+        background: red;
+        cursor: pointer;
+        border-radius: 40px;
+        transition-duration: 1s;
+        transform: scale(1.1);
     }
 }
