--- a/01-HTML-CSS/08-Responsive/wil/style.scss
+++ b/01-HTML-CSS/08-Responsive/wil/style.scss
@@ -1,36 +1,40 @@
 body {
-    background-color: rgb(68, 9, 145);
+    background-color: rgb(209, 183, 241);
     display: grid;
-    gap: 5px;
+    gap: 40px;
     border-radius: 5px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    margin: auto;
+  img{
+      width: 100%;
+  }
 }
 
 @media only screen and (max-width:1200px) {
     body {
-        display: grid;
+      
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+ 
     }
 }
 
 @media only screen and (max-width:900px) {
     body {
-        display: grid;
+       
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+  
     }
 }
 
 @media only screen and (max-width:600px) {
     body {
-        display: grid;
+      
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr);
+     
     }
 }
 .box{
-    background-color: red;
+    background-color: rgb(231, 225, 225);
+    border-radius: 5px;
     
 }
